--- a/src/main.css
+++ b/src/main.css
@@ -7,16 +7,16 @@
 /* BPG Arial Fonts */
 @font-face {
     font-family: 'BPG Arial';
-    src: url('https://cdn.jsdelivr.net/gh/bpgfonts/bpg-arial@latest/fonts/BPG-Arial.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/bpgfonts/bpg-arial@latest/fonts/BPG-Arial.woff') format('woff');
+    src: url('https://web-fonts.ge/bpg-arial/BPG-Arial.woff2') format('woff2'),
+         url('https://web-fonts.ge/bpg-arial/BPG-Arial.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'BPG Arial Caps';
-    src: url('https://cdn.jsdelivr.net/gh/bpgfonts/bpg-arial-caps@latest/fonts/BPG-Arial-Caps.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/bpgfonts/bpg-arial-caps@latest/fonts/BPG-Arial-Caps.woff') format('woff');
+    src: url('https://web-fonts.ge/bpg-arial-caps/BPG-Arial-Caps.woff2') format('woff2'),
+         url('https://web-fonts.ge/bpg-arial-caps/BPG-Arial-Caps.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
